# sprintforge

./: .env.staging.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.staging.yml  docker-compose.yml  pyproject.toml  pytest.ini
.beads/: sf-issues.json
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: excel_formula.md
.github/workflows/: ci.yml  ci.yml.old
backend/: .env.example  .env.test  BD7_DEPENDENCIES.txt  DEPLOYMENT_NOTES.md  Dockerfile  Dockerfile.dev  Dockerfile.staging  README.md  TDD_GUIDELINES.md  TESTING.md  pytest.ini  requirements.txt
backend/app/: __init__.py  main.py
backend/claudedocs/: excel_workflow_test_issues.md  phase_d1_excel_generation_summary.md  phase_d2_excel_parser_summary.md
backend/docs/: Task-3.4-Advanced-Formulas.md  Task-3.6-Template-System.md  Task-3.7-Testing-Validation.md
backend/migrations/: 001_initial_schema.sql  002_simulation_results.sql  003_project_baselines.sql  004_notification_system.sql
backend/scripts/: setup_test_env.sh  validate_excel_generation.py  verify_tests.sh
backend/tests/: BD6_NOTIFICATION_TESTS_SUMMARY.md  BD7_HISTORICAL_METRICS_TEST_SUMMARY.md  conftest.py  test_auth.py  test_auth_coverage.py  test_auth_endpoints.py  test_auth_middleware.py  test_auth_service.py  test_auth_simple.py  test_database.py  test_database_integration.py  test_main.py  test_migrations.py  test_models.py  test_security.py  test_session_service.py  test_user_service.py
claudedocs/: bd-16-completion-report.md  bd-6-notification-system-summary.md  bd-6-notification-ui-implementation.md  bd-7-historical-metrics-summary.md  browser-test-report.md  cleanup-2025-10-04.md  cleanup-2025-10-07.md  integration-analysis-frontend-testing.md  performance-tests-fix-report.md  project-status-2025-10-17.md  resourceutilizationchart-test-fix-report.md  session-state-2025-10-17.md  sprint-5-planning.md  sprint1-foundation-implementation.md  task-3.1-completion.md  task-3.2-completion.md  task-3.3-completion.md  task-4.3-completion.md  task-4.4-completion.md  task-4.5-completion.md  task-4.6-completion.md  task-4.7-e2e-testing-plan.md  task-5.1-implementation-breakdown.md  task-5.1-monte-carlo-research.md  task-5.3-completion-report.md  task-5.3-implementation-breakdown.md  task-5.4-architectural-decisions.md  task-5.4-backend-completion-report.md  task-5.4-frontend-implementation-plan.md  task-5.4-implementation-plan.md  test-troubleshooting-report.md
core/: __init__.py
deployment/: HOME-SERVER-SETUP.md  VPS-TAILSCALE-QUICKSTART.md  nginx-staging.conf
docs/: ARCHIVE-sprint-tasks.md  BEADS-IMPLEMENTATION-PLAN.md  README.md  Sprint-3-Implementation.md  Sprint-4-Implementation-Guide.md  comprehensive-requirements-v1.md  ganttexcel-analysis.md  mvp-implementation-plan.md  requirements-gap-analysis.md  sprint-1-tasks.md  sprint-2-tasks.md  sprint-3-tasks.md  sprint-forge-prd.md  sync-architecture.md
docs/archive/: sprint-2-tasks.md
frontend/: Dockerfile  Dockerfile.staging  jest.config.js  jest.setup.js  middleware.ts  next.config.ts  package-lock.json  package.json
scripts/: run-tests.sh  security_audit.py  setup-dev-env.sh
tests/: conftest.py
(+310 files in other folders)
